# flax

./: .flake8  .gitignore  .sql  README.md  alembic.ini  pyproject.toml
docker/: docker-compose.yml
docs/: requirement_definition.md
docs/クラス/: user.md
migration/: env.py
migration/versions/: 2f51f04ab27b_.py  a9fa1ac58b48_.py
src/flax/: __init__.py  server.py  settings.py
src/flax/app/: crud.py  database.py  initialize.py  main.py  utils.py
src/flax/app/cruds/: __init__.py
src/flax/app/models/: __init__.py  account.py  balance.py  currency.py  permission.py  token.py  wallet.py
src/flax/app/routers/: __init__.py  admin.py  me.py  public.py  token.py  user.py
src/flax/app/schemas/: __init__.py  account.py  balance.py  user.py
tests/: test_flax.py
